Fixed date formats and added current user to be visible

--- a/client/src/static/style/style.css
+++ b/client/src/static/style/style.css
@@ -45,17 +45,15 @@ nav a:hover:after {
     transform-origin: bottom left;
 }
 
-nav img {
-    height: 5rem;
-    padding: 0;
-    margin: 0;
-}
-
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+nav span {
+    line-height: 80px;
 }
 
 .event-register-form {
